--- a/index.html
+++ b/index.html
@@ -6,13 +6,31 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title></title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/foundation/css/foundation.css" >
+    <link rel="stylesheet" href="css/foundation-6/css/app.css" >
   </head>
-  <body>
-    <h1>Hello World!</h1>
-    <input type="button" name="name" value="">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+
+  <body>
+
+    
+
+    <h1>Hello World!</h1>
+
+
+
+<!-- Script Files -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js">
+    </script>
+
+    <script src="css/foundation-6/js/vendor/foundation.min.js">
+    </script>
+
+    <script type="text/javascript" src="css/foundation-6/js/vendor/what-input.js">
+    </script>
+
+    <script type="text/javascript" src="css/foundation-6/js/app.js">
+
+    </script>
   </body>
 </html>
