Wrote task runner ( gulpfile) & added to Readme.md

--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title></title>
 
-    <link rel="stylesheet" href="/css/foundation/css/foundation.css" >
-    <link rel="stylesheet" href="css/foundation-6/css/app.css" >
-  </head>
-
-
-  <body>
-
-    
-
-    <h1>Hello World!</h1>
+    <link rel="stylesheet" href="/css/foundation/css/foundation.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
 
 
 
-<!-- Script Files -->
+
+    <div class="row">
+      <div class="large-6 large-offset-1 columns">
+        <div class="input-group">
+          <span class="input-group-addon"></span>
+          <input class='yellbox' type="text" class="form-control" placeholder="Type it out! 🐼">
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+    <!-- Script Files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js">
     </script>
 
@@ -30,7 +43,7 @@
     </script>
 
     <script type="text/javascript" src="css/foundation-6/js/app.js">
-
     </script>
-  </body>
+</body>
+
 </html>
