--- a/index.html
+++ b/index.html
@@ -3,46 +3,65 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
+    <title>Yeller</title>
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="./css/app.css">
 
-    <link rel="stylesheet" href="/css/foundation/css/foundation.css">
-    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
 
+    <!-- <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a href="#" class="nav-link active text-warning">//Yeller</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">About</a>
+        </li>
+    </ul> -->
+
+    <main>
+
+
+        
+
+        <section>
+            <div class="container">
+
+                <div id="advice">
+                    <p>Little Advisory: Maybe you should type something first. AMCorvi thinks that would be a good idea. #JustSaying 😎</p>
+                </div>
+
+                <div class="">
+                    <input class='yellbox' type="text" name="post" value="" placeholder='Type is out 🐼'>
+                    <button class='yellbutton'>Yell!</button>
+                </div>
+
+        </section>
 
 
 
-    <div class="row">
-      <div class="large-6 large-offset-1 columns">
-        <div class="input-group">
-          <span class="input-group-addon"></span>
-          <input class='yellbox' type="text" class="form-control" placeholder="Type it out! 🐼">
-        </div>
-      </div>
-    </div>
+        <section>
+            <div class="container">
+                <ul class='posts'>
+                    <li>Thought of something clever...</li>
+                    <li>Or do you just want to yell at your screen!</li>
+                    <li> How about yelling into it!!!!! 🤔</li>
+                </ul>
+            </div>
+        </section>
 
 
 
-
-
+    </main>
 
 
 
 
     <!-- Script Files -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js">
-    </script>
-
-    <script src="css/foundation-6/js/vendor/foundation.min.js">
-    </script>
-
-    <script type="text/javascript" src="css/foundation-6/js/vendor/what-input.js">
-    </script>
-
-    <script type="text/javascript" src="css/foundation-6/js/app.js">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+    <script src="js/yell.js" type="text/javascript">
     </script>
 </body>
 
