- Add control flow in order to respond to enter press

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <main>
 
 
-        
+
 
         <section>
             <div class="container">
 
-                <div id="advice">
+                <div class="advice">
                     <p>Little Advisory: Maybe you should type something first. AMCorvi thinks that would be a good idea. #JustSaying 😎</p>
                 </div>
 
@@ -43,10 +43,10 @@
 
         <section>
             <div class="container">
-                <ul class='posts'>
-                    <li>Thought of something clever...</li>
-                    <li>Or do you just want to yell at your screen!</li>
-                    <li> How about yelling into it!!!!! 🤔</li>
+                <ul id='posts'>
+                    <li class='post' >Thought of something clever...</li>
+                    <li class='post' >Or do you just want to yell at your screen!</li>
+                    <li class='post' > How about yelling into it!!!!! 🤔</li>
                 </ul>
             </div>
         </section>
