- Added fade to style - Animated note for blank entry

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <main>
 
 
-
+        <h1>Yeller</h1>
 
         <section>
             <div class="container">
 
-                <div class="advice">
-                    <p>Little Advisory: Maybe you should type something first. AMCorvi thinks that would be a good idea. #JustSaying 😎</p>
+                <div id="advice">
+                    <p>⚠️  Little Advisory: Maybe you should type something first. <a href="http://www.twitter.com/amcorvi">@AMCorvi</a> thinks that would be a good idea. #JustSaying 😎</p>
                 </div>
 
                 <div class="">
@@ -42,12 +42,13 @@
 
 
         <section>
-            <div class="container">
+            <div class="container ul">
                 <ul id='posts'>
                     <li class='post' >Thought of something clever...</li>
                     <li class='post' >Or do you just want to yell at your screen!</li>
                     <li class='post' > How about yelling into it!!!!! 🤔</li>
                 </ul>
+                <div id="fader"></div>
             </div>
         </section>
 
