- Created and integrated delete feature

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <section>
             <div class="container ul">
                 <ul id='posts'>
-                    <li class='post' >Thought of something clever...</li>
-                    <li class='post' >Or do you just want to yell at your screen!</li>
-                    <li class='post' > How about yelling into it!!!!! 🤔</li>
+                    <li class='post' >Thought of something clever... <button class='delbutton'>x</button> </li>
+                    <li class='post' >Or do you just want to yell at your screen! <button class='delbutton'>x</button></li>
+                    <li class='post' > How about yelling into it!!!!! 🤔 <button class='delbutton'>x</button></li>
                 </ul>
                 <div id="fader"></div>
             </div>
